# example-crud

./: CMakeLists.txt
sql/: 001_init.sql
src/: App.cpp  AppComponent.hpp  SwaggerComponent.hpp
src/controller/: MyController.hpp  StaticController.hpp
src/db/: UserDb.hpp
src/dto/: MyDTOs.hpp  UserDto.hpp
src/halcon/: Classifyer.cpp  Classifyer.hpp
